Views: Remove DCHECK failing for ScrollViews, which can't be focused.

Focus rings can be installed on ScrollViews, but FocusRing::Install() DCHECKs
whether the view with a focus ring attached has focus before this happens. This
doesn't make sense since ScrollViews can't be focused - the focus ring is
installed when whatever is contained inside the ScrollView has focus to prevent
the ring from being scrolled.

In particular this affects the collected cookies dialog, which hits the DCHECK
whenever the TreeView inside the ScrollView receives focus. This change deletes
this DCHECK.

BUG=676244

Review-Url: https://codereview.chromium.org/2612463002
Cr-Commit-Position: refs/heads/master@{#441092}

Former-commit-id: 3c2faf580ef236142f2c1ed8a6491c3193becbfd